# app/Http/Controllers/Api/V1/ProductController.php
@@ -22,7 +22,20 @@ class ProductController extends BaseApiController
     {
         $partner = $request->attributes->get('partner');
         $products = Product::query()
-            ->whereHas('partners', fn ($query) => $query->where('partner_products.partner_id', $partner->id)->where('partner_products.status', 'active'))
+            ->select([
+                'products.id',
+                'products.uuid',
+                'products.name',
+                'products.slug',
+                'products.description',
+                'products.status',
+                'products.cover_duration_options',
+                'partner_products.partner_price',
+                'partner_products.partner_currency',
+            ])
+            ->join('partner_products', 'partner_products.product_id', '=', 'products.id')
+            ->where('partner_products.partner_id', $partner->id)
+            ->where('partner_products.status', 'active')
             ->get();
 
         return response()->json(['status' => 'success', 'data' => $products]);
